# Snakill

./: CMakeLists.txt  README.md
include/: controller.h  renderer.h  snake.h
src/: controller.cpp  controller.h  game.cpp  game.h  main.cpp  renderer.cpp  rival_snake.cpp  rival_snake.h  snake.cpp  snake.h
